@@ -11,3 +11,4 @@ resources/
 daily_description
 description
 participant_data
+config.yaml
